<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/delete_medicine"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/delete_medicine_confirmation"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <CheckBox
        android:id="@+id/check_box_save_data_in_calendar"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:text="@string/text_save_data_in_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:layout_marginStart="24dp"
        android:text="@string/cancel_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_box_save_data_in_calendar"
        app:layout_constraintWidth_percent="0.40" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/pink"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_box_save_data_in_calendar"
        app:layout_constraintWidth_percent="0.40"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>